@@ -1,0 +1,1 @@
+void cmd_dispatch (struct tty *tty, const char *line);
