@@ -1,0 +1,2 @@
+#define CRC32_SUPPORT
+#define TEMPERATURE_SUPPORT
