@@ -1,3 +1,8 @@
+2016-05-24  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* example-fs-bb48/command.c: New.
+	* example-fs-bb48: Update example CDC device.
+
 2016-05-23  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* chopst.x (chx_sched) [__ARM_ARCH_6M__]: Maintain PSR.
